; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/pvrusb2/extr_pvrusb2-std.c_find_std_name.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/pvrusb2/extr_pvrusb2-std.c_find_std_name.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.std_name = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.std_name* (%struct.std_name*, i32, i8*, i32)* @find_std_name to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.std_name* @find_std_name(%struct.std_name* %0, i32 %1, i8* %2, i32 %3) #0 {
  %5 = alloca %struct.std_name*, align 8
  %6 = alloca %struct.std_name*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca %struct.std_name*, align 8
  store %struct.std_name* %0, %struct.std_name** %6, align 8
  store i32 %1, i32* %7, align 4
  store i8* %2, i8** %8, align 8
  store i32 %3, i32* %9, align 4
  store i32 0, i32* %10, align 4
  br label %12

12:                                               ; preds = %39, %4
  %13 = load i32, i32* %10, align 4
  %14 = load i32, i32* %7, align 4
  %15 = icmp ult i32 %13, %14
  br i1 %15, label %16, label %42

16:                                               ; preds = %12
  %17 = load %struct.std_name*, %struct.std_name** %6, align 8
  %18 = load i32, i32* %10, align 4
  %19 = zext i32 %18 to i64
  %20 = getelementptr inbounds %struct.std_name, %struct.std_name* %17, i64 %19
  store %struct.std_name* %20, %struct.std_name** %11, align 8
  %21 = load %struct.std_name*, %struct.std_name** %11, align 8
  %22 = getelementptr inbounds %struct.std_name, %struct.std_name* %21, i32 0, i32 0
  %23 = load i32, i32* %22, align 4
  %24 = call i32 @strlen(i32 %23)
  %25 = load i32, i32* %9, align 4
  %26 = icmp ne i32 %24, %25
  br i1 %26, label %27, label %28

27:                                               ; preds = %16
  br label %39

28:                                               ; preds = %16
  %29 = load i8*, i8** %8, align 8
  %30 = load %struct.std_name*, %struct.std_name** %11, align 8
  %31 = getelementptr inbounds %struct.std_name, %struct.std_name* %30, i32 0, i32 0
  %32 = load i32, i32* %31, align 4
  %33 = load i32, i32* %9, align 4
  %34 = call i32 @memcmp(i8* %29, i32 %32, i32 %33)
  %35 = icmp ne i32 %34, 0
  br i1 %35, label %38, label %36

36:                                               ; preds = %28
  %37 = load %struct.std_name*, %struct.std_name** %11, align 8
  store %struct.std_name* %37, %struct.std_name** %5, align 8
  br label %43

38:                                               ; preds = %28
  br label %39

39:                                               ; preds = %38, %27
  %40 = load i32, i32* %10, align 4
  %41 = add i32 %40, 1
  store i32 %41, i32* %10, align 4
  br label %12

42:                                               ; preds = %12
  store %struct.std_name* null, %struct.std_name** %5, align 8
  br label %43

43:                                               ; preds = %42, %36
  %44 = load %struct.std_name*, %struct.std_name** %5, align 8
  ret %struct.std_name* %44
}

declare dso_local i32 @strlen(i32) #1

declare dso_local i32 @memcmp(i8*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
